# bazel-template

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  hello.cc  hello.h  hello_fuzz_test.cc  hello_test.cc
scripts/: clang_format_wrapper.sh  clang_tidy_wrapper.sh
